--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -2,9 +2,9 @@
   "ITB-1101-CP1": {
     "ui": "circle-default",
 	"inputdevices": [
-		{
+	{
           "name": "Overflow",
-          "icon": "people"
+          "icon": "settings_input_antenna"
         },
         {
           "name": "HDMIIn",
