--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -35,6 +35,21 @@
                     "DSP1"
 	            ],
                 "defaultaudio": "D2"  
+            },
+            {
+                "name": "D3",
+	            "icon": "tv",
+                "inputs": [
+                    "Overflow",
+                    "AppleTV",
+                    "ChromeCast"
+                ],
+                "defaultinput": "AppleTV",
+	            "audiodevices": [
+		            "D3",
+                    "DSP1"
+	            ],
+                "defaultaudio": "D3"  
             }
         ],
         "features": [
