--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -47,5 +47,54 @@
            	"power-off-all",
            	"group-input"
 		]	
+	},
+	"ITB-1101-CP2": {
+       	"ui": "circle-default",
+		"inputdevices": [
+	 		{
+              	"name": "Overflow",
+               	"icon": "settings_input_antenna"
+			},
+           	{
+               	"name": "HDMIIn",
+               	"icon": "settings_input_hdmi"
+           	},
+           	{
+               	"name": "AppleTV",
+               	"icon": "airplay"
+           	},
+           	{
+               	"name": "ChromeCast",
+               	"icon": "cast"
+           	}
+		],
+       	"displays": [
+           	{
+              	"name": "D2",
+	       		"icon": "tv",
+               	"inputs": [
+                	"Overflow",
+                   	"HDMIIn",
+                   	"AppleTV",
+                   	"ChromeCast"
+               	],
+               	"defaultinput": "AppleTV"  
+            }
+       	],
+		"audio": [
+			{
+				"displays": [
+					"D2"
+				],
+				"audiodevices": [
+					"D2"
+				]
+			}
+		],
+        "features": [
+           	"display-to-all",
+           	"power-off-all",
+           	"group-input"
+		]	
 	}
 }
