--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -222,5 +222,41 @@
            	"power-off-all",
            	"group-input"
 		]	
+	},
+	"ITB-1110-CP1": {
+       	"ui": "circle-default",
+		"inputdevices": [
+	 		{
+              	"name": "PC1",
+               	"icon": "computer"
+			},
+           	{
+               	"name": "IPTV",
+               	"icon": "live_tv"
+           	}
+		],
+       	"displays": [
+           	{
+              	"name": "D1",
+	       		"icon": "tv",
+               	"inputs": [
+					"PC1",
+					"IPTV"
+               	],
+               	"defaultinput": "PC1"  
+            }
+       	],
+		"audio": [
+			{
+				"displays": [
+					"D1"
+				],
+				"audiodevices": [
+					"D1"
+				]
+			}
+		],
+		"features": [
+		]
 	}
 }
