--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -236,7 +236,8 @@
             ]
         }],
         "features": []
-    },"ITB-1112-CP1": {
+    },
+    "ITB-1112-CP1": {
         "ui": "circle-default",
         "inputdevices": [{
                 "name": "HDMI3",
@@ -265,6 +266,182 @@
             ]
         }],
         "features": []
+    },
+    "ITB-1006-CP2": {
+        "ui": "circle-default",
+        "inputdevices": [{
+                "name": "HDMIIn",
+                "icon": "settings_input_hdmi"
+            },
+            {
+                "name": "Overflow",
+                "icon": "people"
+            }
+        ],
+        "displays": [{
+            "name": "D1",
+            "icon": "tv",
+            "inputs": [
+                "Overflow",
+                "HDMIIn"
+            ],
+            "defaultinput": "HDMIIn"
+        }],
+        "audio": [{
+            "displays": [
+                "D1"
+            ],
+            "audiodevices": [
+                "D1"
+            ]
+        }],
+        "features": []
+    },
+    "ITB-3006-CP2": {
+        "ui": "circle-default",
+        "inputdevices": [{
+                "name": "AppleTV",
+                "icon": "airplay"
+            },
+            {
+                "name": "Table",
+                "icon": "table"
+            }
+        ],
+        "displays": [{
+            "name": "D1",
+            "icon": "tv",
+            "inputs": [
+                "Table",
+                "AppleTV"
+            ],
+            "defaultinput": "Table"
+        }],
+        "audio": [{
+            "displays": [
+                "D1"
+            ],
+            "audiodevices": [
+                "D1"
+            ]
+        }],
+        "features": []
+    },
+    "ITB-3310-CP2": {
+        "ui": "circle-default",
+        "inputdevices": [{
+            "name": "Table",
+            "icon": "table"
+        }],
+        "displays": [{
+            "name": "D1",
+            "icon": "tv",
+            "inputs": [
+                "Table"
+            ],
+            "defaultinput": "Table"
+        }],
+        "audio": [{
+            "displays": [
+                "D1"
+            ],
+            "audiodevices": [
+                "D1"
+            ]
+        }],
+        "features": []
+    },
+    "ITB-1010-CP1": {
+        "ui": "circle-default",
+        "inputdevices": [{
+            "name": "Via1",
+            "icon": "settings_input_antenna"
+        }, {
+            "name": "HDMI1",
+            "icon": "settings_input_hdmi"
+        },{
+            "name": "Via2",
+            "icon": "settings_input_antenna"
+        }, {
+            "name": "HDMI2",
+            "icon": "settings_input_hdmi"
+        }],
+        "displays": [{
+            "name": "D1",
+            "icon": "tv",
+            "inputs": [
+                "Via1",
+                "HDMI1"
+            ],
+            "defaultinput": "Via1"
+        }],
+        "audio": [{
+                "displays": [
+                    "D1"
+                ],
+                "audiodevices": [
+                    "D1"
+                ]
+            },
+            {
+                "displays": [
+                    "dta"
+                ],
+                "audiodevices": [
+                    "DSP1"
+                ]
+            }
+        ],
+        "features": ["display-to-all",
+            "power-off-all",
+            "group-input"
+        ]
+    },
+    "ITB-1010-CP2": {
+        "ui": "circle-default",
+        "inputdevices": [{
+            "name": "Via1",
+            "icon": "settings_input_antenna"
+        }, {
+            "name": "HDMI1",
+            "icon": "settings_input_hdmi"
+        },{
+            "name": "Via2",
+            "icon": "settings_input_antenna"
+        }, {
+            "name": "HDMI2",
+            "icon": "settings_input_hdmi"
+        }],
+        "displays": [{
+            "name": "D2",
+            "icon": "tv",
+            "inputs": [
+                "Via2",
+                "HDMI2"
+            ],
+            "defaultinput": "Via2"
+        }],
+        "audio": [{
+                "displays": [
+                    "D2"
+                ],
+                "audiodevices": [
+                    "D2"
+                ]
+            },
+            {
+                "displays": [
+                    "dta"
+                ],
+                "audiodevices": [
+                    "DSP1"
+                ]
+            }
+        ],
+        "features": ["display-to-all",
+            "power-off-all",
+            "group-input"
+        ]
     }
 
 }
