--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -7,7 +7,7 @@
             },
             {
                 "name": "PC1",
-                "icon": "settings_input_hdmi"
+                "icon": "desktop_windows"
             },
             {
                 "name": "AppleTV",
@@ -60,7 +60,7 @@
             },
             {
                 "name": "PC1",
-                "icon": "settings_input_hdmi"
+                "icon": "desktop_windows"
             },
             {
                 "name": "AppleTV",
@@ -113,7 +113,7 @@
             },
             {
                 "name": "PC1",
-                "icon": "settings_input_hdmi"
+                "icon": "desktop_windows"
             },
             {
                 "name": "AppleTV",
