--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -204,6 +204,7 @@
             }
         ],
         "features": [
+            "display-to-all",
             "power-off-all",
             "group-input"
         ]
@@ -254,6 +255,7 @@
             }
         ],
         "features": [
+            "display-to-all",
             "power-off-all",
             "group-input"
         ]
