This is where the fun begins

--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -336,6 +336,10 @@
             "power-off-all",
             "group-input"
         ]
-    }
+    },
+
+	"CTB-410-CP1": {
+		"ui": "circle-defualt"
+	}
 
 }
