Oh, this is going to be easy

--- a/ui-configuration.json
+++ b/ui-configuration.json
@@ -362,6 +362,10 @@
 		"ui": "circle-default"
 	},
 
+	"CTB-410-CP4": {
+		"ui": "circle-default"
+	},
+
 	"CTB-410-CP6": {
 		"ui": "circle-defualt"
 	}
