--- a/ITB-1106B/config.json
+++ b/ITB-1106B/config.json
@@ -7,19 +7,19 @@
     "ITB-1106B-CP1": {
         "ui": "circle-default",
         "inputdevices": [{
-                "name": "HDMIWest",
+                "name": "HDMI1",
                 "icon": "settings_input_hdmi"
             },
             {
-                "name": "Via1",
+                "name": "VIA1",
                 "icon": "settings_input_antenna"
             },
             {
-                "name": "HDMISouth",
+                "name": "HDMI2",
                 "icon": "settings_input_hdmi"
             },
             {
-                "name": "Via2",
+                "name": "VIA2",
                 "icon": "settings_input_antenna"
             }
         ],
@@ -27,10 +27,10 @@
             "name": "D1",
             "icon": "videocam",
             "inputs": [
-                "HDMIWest",
-                "Via1"
+                "HDMI1",
+                "VIA1"
             ],
-            "defaultinput": "Via1"
+            "defaultinput": "VIA1"
         }],
         "audio": [{
                 "displays": [
@@ -58,19 +58,19 @@
     "ITB-1106B-CP2": {
         "ui": "circle-default",
         "inputdevices": [{
-                "name": "HDMISouth",
+                "name": "HDMI2",
                 "icon": "settings_input_hdmi"
             },
             {
-                "name": "Via2",
+                "name": "VIA2",
                 "icon": "settings_input_antenna"
             },
             {
-                "name": "HDMIWest",
+                "name": "HDMI1",
                 "icon": "settings_input_hdmi"
             },
             {
-                "name": "Via1",
+                "name": "VIA1",
                 "icon": "settings_input_antenna"
             }
         ],
@@ -78,10 +78,10 @@
             "name": "D2",
             "icon": "tv",
             "inputs": [
-                "HDMISouth",
-                "Via2"
+                "HDMI2",
+                "VIA2"
             ],
-            "defaultinput": "Via2"
+            "defaultinput": "VIA2"
         }],
         "audio": [{
                 "displays": [
