--- a/MSRB-202/config.json
+++ b/MSRB-202/config.json
@@ -1,6 +1,6 @@
 {
 	"apiconfig": {
-		"enabled": true,
+		"enabled": false,
 		"1": "MSRB-202-CP1.byu.edu",
 		"2": "MSRB-202-CP2.byu.edu",
 		"3": "MSRB-202-CP3.byu.edu",
@@ -11,44 +11,20 @@
 	"MSRB-202-CP1": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
-        },{
-            "name": "Via2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-		}],
+        },
 		"displays": [{
 			"name": "D1",
-			"icon": "tv",
+			"icon": "videocam",
 			"inputs": [
-				"Via1",
+				"VIA1",
 				"HDMI1"	
 			],
-			"defaultinput": "Via1"
+			"defaultinput": "VIA1"
 		}],
 		"audio": [{
 			"displays": [
@@ -64,44 +40,20 @@
 	"MSRB-202-CP2": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "Via2",
+           	"name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-		}],
+        },
 		"displays": [{
 			"name": "D2",
 			"icon": "tv",
 			"inputs": [
-				"Via2",
+				"VIA2",
 				"HDMI2"	
 			],
-			"defaultinput": "Via2"
+			"defaultinput": "VIA2"
 		}],
 		"audio": [{
 			"displays": [
@@ -117,44 +69,20 @@
 	"MSRB-202-CP3": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "Via2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via3",
+           	"name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-		}],
+        },
 		"displays": [{
 			"name": "D3",
 			"icon": "tv",
 			"inputs": [
-				"Via3",
+				"VIA3",
 				"HDMI3"	
 			],
-			"defaultinput": "Via3"
+			"defaultinput": "VIA3"
 		}],
 		"audio": [{
 			"displays": [
@@ -170,44 +98,20 @@
 	"MSRB-202-CP4": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "Via2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via4",
+           	"name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-		}],
+        },
 		"displays": [{
 			"name": "D4",
 			"icon": "tv",
 			"inputs": [
-				"Via4",
+				"VIA4",
 				"HDMI4"	
 			],
-			"defaultinput": "Via4"
+			"defaultinput": "VIA4"
 		}],
 		"audio": [{
 			"displays": [
@@ -223,44 +127,20 @@
 	"MSRB-202-CP5": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "Via2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "Via5",
+           	"name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
-		}],
+        },
 		"displays": [{
 			"name": "D5",
 			"icon": "tv",
 			"inputs": [
-				"Via5",
+				"VIA5",
 				"HDMI5"	
 			],
-			"defaultinput": "Via5"
+			"defaultinput": "VIA5"
 		}],
 		"audio": [{
 			"displays": [
